gccida/c2/gen_split_961
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_961/src/insn-emit.c:8855:30: error: use of undeclared identifier 'machine_mode'
operands[1] = gen_lowpart( ( machine_mode)v4, operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_961/src/insn-emit.c:8856:30: error: use of undeclared identifier 'machine_mode'
operands[2] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[2]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_961/src/insn-emit.c:8862:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_961/src/obj/insn-emit.o] Error 1
